examples/good/05-While.tms
void main() {

  int i = 20;
  int x = 0;

  while (i > 10) {
    printInt(x);
    x = x + i;
    i--;
  }
  
  printInt(x);

  return;
}