examples/bad/02-CombiningOperators.tms
void main () {
  int x = 10 + 4 && true;
  return;
}